# scythe

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
crates/data/: Cargo.toml
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs  temp.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
src/: lib.rs
