[package]
name = "scythe"
version = "0.2.1"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"
description = "A library and tool set for creating applications with Rust"
documentation = "https://docs.rs/scythe"
readme = "README.md"
homepage = "https://github.com/BSFishy/scythe"
repository = "https://github.com/BSFishy/scythe"
license = "MIT"

[workspace]
members = ["crates/*"]

[features]
default = ["data", "paths", "platform"]

data = ["scythe_data"]
paths = ["scythe_paths"]
platform = ["scythe_platform"]

[dependencies]
scythe_data = { path = "crates/data", version = "0.1.0", optional = true }
scythe_paths = { path = "crates/paths", version = "0.1.0", optional = true }
scythe_platform = { path = "crates/platform", version = "0.1.0", optional = true }
